# retro-manager-installer

./: .travis.yml  pom.xml
src/main/c++/: CMakeLists.txt  httplib.h  main.cpp
src/main/scripts/linux64/: CMakeLists.txt  build.sh
src/main/scripts/win64/: CMakeLists.txt  app.rc  build.sh
